Patch 0001 : objectifs allocation partielle
